
erDiagram
    DEALER ||--o{ USER : "employs"
    DEALER ||--o{ DEALER_BRAND : "has access to"
    BRAND ||--o{ DEALER_BRAND : "granted to"
    BRAND ||--o{ MATERIAL_BRAND : "targets"
    CATEGORY ||--o{ MATERIAL : "classifies"
    USER ||--o{ MATERIAL : "creates"
    MATERIAL ||--o{ MATERIAL_BRAND : "shared with"
    MATERIAL ||--o{ MATERIAL_FILE : "has"
    MATERIAL ||--o{ MATERIAL : "generates (schedule template)"
    USER ||--o{ ACCESS_LOG : "performs"
    MATERIAL ||--o{ ACCESS_LOG : "target of"
    MATERIAL_FILE ||--o{ ACCESS_LOG : "target of"
    USER ||--o{ NOTIFICATION : "receives"
    MATERIAL ||--o{ NOTIFICATION : "about"

    DEALER {
        int Id PK
        string Name
        string Code
        bool IsActive
    }

    BRAND {
        int Id PK
        string Name
        string Code
        string BadgeLabel
        string BadgeColor
        bool IsActive
    }

    DEALER_BRAND {
        int DealerId PK,FK
        int BrandId PK,FK
    }

    CATEGORY {
        int Id PK
        string Name
        string Description
        bool IsActive
    }

    USER {
        int Id PK
        string Name
        string Email
        string PasswordHash
        enum Role "RoleType: Admin/ContentManager/DealerUser"
        int DealerId FK "nullable"
        bool IsActive
        string Phone "nullable"
    }

    MATERIAL {
        int Id PK
        string Title
        string Description
        int CategoryId FK
        string FileName
        string StoredFileName
        string FilePath
        string MimeType
        long FileSize
        enum Status "MaterialStatus: Draft/Active/Archived/Scheduled"
        int Version
        datetime PublishedAt
        datetime ExpiresAt "nullable"
        datetime ScheduledPublishAt "nullable"
        enum RecurrenceKind "None/Weekly/MonthlyDay"
        int RecurrenceDayOfWeek "nullable, 0-6"
        int RecurrenceDayOfMonth "nullable, 1-28"
        int ScheduleTemplateId FK "nullable, self-ref"
        int CreatedBy FK
        datetime CreatedAt
        datetime UpdatedAt
    }

    MATERIAL_BRAND {
        int MaterialId PK,FK
        int BrandId PK,FK
    }

    MATERIAL_FILE {
        int Id PK
        int MaterialId FK
        string FileName
        string StoredFileName
        string FilePath
        string MimeType
        long FileSize
        int SortOrder
        datetime CreatedAt
    }

    ACCESS_LOG {
        int Id PK
        int UserId FK "nullable"
        string UserName "nullable"
        int MaterialId FK "nullable"
        int MaterialFileId FK "nullable"
        string Action
        string Description
        string LoginStatus "nullable"
        datetime ViewedAtUtc
        string IpAddress
        string UserAgent "nullable"
    }

    NOTIFICATION {
        int Id PK
        int UserId FK
        enum Kind "NotificationKind: Document/Expiry/Announcement"
        string Title
        string Body
        int MaterialId FK "nullable"
        bool IsRead
        datetime CreatedAt
    }
